--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -12,10 +12,12 @@
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.6.0",
     "react-router-dom": "^6.4.2",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
     "save": "^2.9.0",
+    "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
