Testing UPDATE & LISTALL

--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "find-config": "^1.0.0",
+    "morgan": "^1.10.0",
     "mysql2": "^2.3.3"
   }
 }
