--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
     "find-config": "^1.0.0",
+    "fs": "^0.0.1-security",
     "handy-storage": "^2.1.6",
     "jsonwebtoken": "^8.5.1",
     "jwt-decode": "^3.1.2",
