--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@testing-library/jest-dom": "^5.16.5",
@@ -19,6 +20,7 @@
     "react-router-dom": "^6.4.2",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "sass": "^1.55.0",
     "save": "^2.9.0",
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
