--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "crypto": "^1.0.1",
     "dotenv": "^16.0.3",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.2",
@@ -17,6 +18,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "mysql2-promise": "^0.1.4",
+    "nodemailer": "^6.8.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "sequelize": "^6.25.3",
