--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -27,6 +27,7 @@
     "react-router-dom": "^6.4.3",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^9.1.1",
     "sass": "^1.55.0",
     "save": "^2.9.0",
     "styled-components": "^5.3.6",
