--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -9,7 +9,8 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/material": "^5.10.12",
+    "@mui/icons-material": "^5.10.14",
+    "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -19,6 +20,7 @@
     "classnames": "^2.3.2",
     "gapi-script": "^1.2.0",
     "i": "^0.3.7",
+    "material-react-table": "^1.3.9",
     "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.5.0",
