--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -10,6 +10,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.10.14",
+    "@mui/lab": "^5.0.0-alpha.110",
     "@mui/material": "^5.10.14",
     "@mui/x-data-grid": "^5.17.9",
     "@testing-library/jest-dom": "^5.16.5",
