--- a/client/durandaltest/package.json
+++ b/client/durandaltest/package.json
@@ -9,10 +9,10 @@
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
-    "@mui/icons-material": "^5.10.14",
+    "@mui/icons-material": "^5.11.0",
     "@mui/joy": "^5.0.0-alpha.58",
     "@mui/lab": "^5.0.0-alpha.110",
-    "@mui/material": "^5.11.0",
+    "@mui/material": "^5.11.3",
     "@mui/x-data-grid": "^5.17.9",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -28,6 +28,7 @@
     "react-bootstrap": "^2.5.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.6.0",
+    "react-pro-sidebar": "^1.0.0-alpha.9",
     "react-router-dom": "^6.4.3",
     "react-script": "^2.0.5",
     "react-scripts": "^5.0.1",
